# rustlog

./: .gitignore  Cargo.toml  makefile
.github/workflows/: rust.yml
cargo_crate_mod/: Cargo.toml
cargo_crate_mod/src/arithmetic/: mod.rs
edition2024/src/: features.rs
grpc_hello/: Cargo.toml
grpc_hello/src/: client.rs  server.rs
hello_marco/: Cargo.toml
hello_marco/src/: lib.rs
hello_marco_derive/: Cargo.toml
hello_marco_derive/src/: lib.rs
leetcode/: Cargo.toml
leetcode/src/: 0020.valid-parentheses.rs  0024.swap-nodes-in-pairs.rs  0046.permutations.rs  0050.pow.rs  0082.remove-duplicates-from-sorted-list-ii.rs  0089.gray-code.rs  0153.find-minimum-in-rotated-sorted-array.rs  0154.find-minimum-in-rotated-sorted-array-array-ii.rs  0209.minimum-size-subarry-sum.rs  0230.kth-smallest-element-in-a-bst.rs  0275.h-index-ii.rs  0312.burst-ballons.rs  0327.count-of-range-sum.rs  0329.longest-increasing-path-in-a-matrix.rs  0338.counting-bits.rs  0343.integer-break.rs  0347.top-k-frequent-elements.rs  0349.intersection-of-two-arrays.rs  0352.data-stream-as-disjoint-intervals.rs  0375.guess-number-higher-or-lower-ii.rs  0400.nth-digit.rs  0494.target-sum.rs  0740.delete-and-earn.rs  0781.rabbits-in-forest.rs  0802.find-eventual-safe-states.rs  0805.split-array-with-same-average.rs  0813.largest-sum-of-averages.rs  1014.best-sightseeing-pair.rs  109.convert-sorted-list-to-binary-search-tree.rs  1146.snapshot-array.rs  129.sum-root-leaf-nums.rs  1432.max-difference-from-changing-an-number.rs  153.find-minimum-in-rotated-sorted-array.rs  162.find-peak-element.rs  167.two-sum-ii-input-array-is-sorted.rs  1726.tuple-with-same-product.rs  173.binary-search-tree-iterator.rs  1865.find-pairs-with-a-certain-sum.rs  1936.add-minimum-number-of-rungs.rs  199.binary-tree-right-side-view.rs  (+36 more)
length/: Cargo.toml
length/src/: lib.rs
optional-dependency/: Cargo.toml
optional-dependency/src/: main.rs
rust_by_practice/: Cargo.toml  makefile
rust_by_practice/src/: lib.rs  main.rs
rust_by_practice/src/practice/: mod.rs  p000_crate.rs  p010_basics.rs  p020_ownership.rs  p030_flow_control.rs  p040_reference.rs  p050_string.rs  p060_array.rs  p061_slice.rs  p070_tuple.rs  p080_struct.rs  p090_enum.rs  p100_pattern_match.rs  p110_generic.rs  p120_trait.rs  p121_dyn_trait.rs  p130_vector.rs  p140_hashmap.rs  p150_default_trait.rs  p160_type_coercion.rs  p170_from_into_trait.rs  p180_trait_generic_implementation.rs  p190_mod_tests_use_parent.rs  p200_trait_display.rs  p220_result.rs  p230_printing.rs  p240_lifetimes.rs  p250_static_lifetime.rs  p260_closures.rs  p270_iterator.rs  p280_pointers.rs  p290_linkedlist.rs  p300_phantom_data_leak_drop.rs  p310_cell.rs  p320_documentation.rs  p330_box.rs  p340_fearless_concurrency.rs  p350_unsafe.rs  p360_advanced_trait.rs  p390_marcos.rs  (+15 more)
rust_by_practice/src/restaurant/: back_of_house.rs
samples/cargo_crate_mod/: Cargo.toml
samples/cargo_crate_mod/src/: lib.rs  main.rs
samples/cargo_crate_mod/src/restaurant/: back_of_house.rs  mod.rs
samples/cargo_feature/: Cargo.toml  makefile
samples/cargo_feature/src/: main.rs
samples/edition2024/: Cargo.toml
samples/edition2024/src/: features.rs
samples/grpc_hello/: Cargo.toml  build.rs  makefile
samples/grpc_hello/proto/helloworld/: helloworld.proto
samples/grpc_hello/src/: lib.rs  server.rs
samples/instant_chat/: .gitignore  Cargo.toml  README.md  build.rs  makefile
samples/instant_chat/proto/instantchat/v1/: instantchat.proto
samples/instant_chat/proto/v1/: buf.yaml  instant_chat.proto
samples/instant_chat/src/: lib.rs  valkey_chat_service.rs  valkey_repository.rs
samples/wasm_permute/: Cargo.toml  LICENSE_MIT  README.md  makefile
samples/wasm_permute/src/: lib.rs
samples/wasm_permute/use_wasm_permute/: main.ts
samples/web_apps/: Cargo.toml  Dockerfile  build.rs  grafana_json_model.json  service.yaml  service_monitor.yaml
src/: lib.rs  main.rs  restaurant.rs
src/practice/: mod.rs  p000_crate.rs  p010_basics.rs  p020_ownership.rs  p030_flow_control.rs  p040_reference.rs  p050_string.rs  p060_array.rs  p070_tuple.rs  p080_struct.rs  p090_enum.rs  p100_pattern_match.rs  p110_generic.rs  p120_trait.rs  p130_vector.rs  p140_hashmap.rs  p150_default_trait.rs  p160_type_coercion.rs  p170_from_into_trait.rs  p190_mod_tests_use_parent.rs  p200_trait_display.rs  p210_panic.rs  p220_result.rs  p240_lifetimes.rs  p250_static_lifetime.rs  p260_closures.rs  p280_pointers.rs  p290_linkedlist.rs  p300_phantom_data_leak_drop.rs  p310_cell.rs  p320_documentation.rs  p330_box.rs  p340_fearless_concurrency.rs  p350_unsafe.rs  p370_advanced_type.rs  p380_advanced_fn_closure.rs
src/restaurant/front_of_house/: hosting.rs  serving.rs
src/restaurant2/: front_of_house.rs  mod.rs
src/restaurant2/back_of_house/: cooking.rs  mod.rs
src/restaurant2/front_of_house/: hosting.rs  serving.rs
wasm_permute/: Cargo.toml  README.md
web_apps/: Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh  makefile
web_apps/k6_test/: k8s_stress.yaml  stress.js
