[workspace]
resolver = "2"
members = [
    "rust_by_practice",
    "hello_marco",
    "hello_marco_derive",
    "length",
    "cargo_feature",
    "web_apps",
    "leetcode",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# Abort the program immediately if panic, without unwinding call stack, cleaning up.
# Make the resulting binary as small as possible.
panic = "abort"
# Link Time Optimiation
lto = "thin"

[profile.dev]
