[workspace]
resolver = "2"
members = [
    "rust_by_practice",
    "hello_marco",
    "hello_marco_derive",
    "length",
    "cargo_feature",
    "web_apps",
    "leetcode",
    "cargo_crate_mod",
    "grpc_hello",
    "wasm_permute",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# Abort the program immediately if panic, without unwinding call stack, cleaning up.
# Make the resulting binary as small as possible.
panic = "abort"
# Link Time Optimiation
lto = "thin"
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[profile.dev]

[profile.test]
debug = true
debug-assertions = true
overflow-checks = true
