[package]
name = "rust_by_practice"
version = "0.1.0"
edition = "2024"
description = "Rust language experimental playground."
license = "MIT OR Apache-2.0"

[[bin]]
name = "hello"
path = "src/bin/hello/main.rs"

[[bin]]
name = "guess"
path = "src/bin/guess/main.rs"

[[bin]]
name = "guess_with_return"
path = "src/bin/guess_with_return/main.rs"

[[bin]]
name = "minigrep"
path = "src/bin/minigrep/main.rs"

[[bin]]
name = "swiss_table"
path = "src/bin/swiss_table.rs"

[[bin]]
name = "zero_copy"
path = "src/bin/zero_copy/main.rs"

[dependencies]
time = { version = "0.3", features = ["local-offset"] }
rand = "0.9.2"
utf8_slice = "1.0.0"
twox-hash = "2.0.1"
hello_marco = { path = "../hello_marco", features = ["derive"] }
length = { path = "../length" }
ctrlc = "3.4.5"
futures = "0.3.31"
tokio = { version = "1.42.0", features = [
    "time",
    "rt-multi-thread",
    "macros",
    "sync",
    "io-util",
    "fs",
] }
axum = "0.8.4"
lazy_static = "1.5.0"
hashbrown = "0.15.2"
siphasher = "1.0.1"
nix = { version = "0.30", features = ["zerocopy"] }
libc = "0.2"
