[package]
name = "web_apps"
version = "0.1.0"
edition = "2021"
resolver = "2"

[[bin]]
name = "prometheus_metrics_example"
path = "src/bin/prometheus_metrics.rs"

[dependencies]
axum = "^0.7"
tokio = { version = "^1.0", features = ["full"] }
metrics = { version = "^0.23", default-features = false }
metrics-exporter-prometheus = { version = "^0.15", default-features = false }
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
