[package]
name = "cargo_feature"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_json = "^1.0"

# Reference: https://doc.rust-lang.org/cargo/reference/features.html
[features]
# Uncomment the `default` line to enable feature serde by default
# default = ["serde"]
serde = ["dep:serde"]
