[package]
name = "instant_chat"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
crossterm = "0.29"
tui = { version = "0.19", features = ["crossterm"] }
futures = "0.3"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
prost = "0.13"
prost-types = "0.13"
tonic = "0.13"
tonic-reflection = "0.13.0"
chrono = "0.4"
async-stream = "0.3"
redis = { version = "0.32", features = ["aio", "tokio-comp"] }
clap =  { version = "4.5.32", features = ["derive"] }

[build-dependencies]
tonic-build = { version = "0.13", features = ["prost"] }
