[package]
name = "web_apps"
version = "0.1.0"
edition = "2024"
resolver = "2"

[[bin]]
name = "prometheus_metrics_example"
path = "src/bin/prometheus_metrics/main.rs"

[dependencies]
axum = "^0.8"
tokio = { version = "^1.47", features = ["full"] }
metrics = { version = "^0.24", default-features = false }
metrics-exporter-prometheus = { version = "^0.17", default-features = false }
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.5"

[build-dependencies]
chrono = { version = "0.4", features = ["serde"] }
